apps/members/members-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: duah-members-dep
  namespace: duah-apps
  labels:
    app: duah-members
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: duah-members
  template:
    metadata:
      labels:
        app: duah-members
    spec:
      imagePullSecrets:
      - name: duah-ghcr-pull-secret
      containers:
      - name: duah-members
        image: ghcr.io/denuafhaengige/duah-members:master-968229f-1646649596 # {"$imagepolicy": "duah-apps:duah-members-image-policy"}
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        - name: health
          containerPort: 9090
          protocol: TCP
        resources:
          limits:
            cpu: 64m
            memory: 128Mi
          requests:
            cpu: 32m
            memory: 64Mi
        livenessProbe:
          httpGet:
            path: /healthz/live
            port: health
          failureThreshold: 3
          periodSeconds: 10
          initialDelaySeconds: 30
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: health
          failureThreshold: 3
          periodSeconds: 10
          initialDelaySeconds: 30
